--- a/ClickCounter/css/counterclick.css
+++ b/ClickCounter/css/counterclick.css
@@ -18,12 +18,14 @@ button {
   background-color: green;
   margin-right: 100px;
   border-radius: 40%;
-}
+cursor:pointer;
+}  
 
 #decrementButton {
   background-color: red;
   margin-left: 100px;
   border-radius: 40%;
+  cursor:pointer;
 }
 
 #resetButton {
